deployment/base/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxi-server
  labels:
    app: taxi-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taxi-server
  template:
    metadata:
      labels:
        app: taxi-server
    spec:
      containers:
        - name: taxi-server
          image: 666583083672.dkr.ecr.ap-northeast-2.amazonaws.com/taxi-back:latest
          ports:
          - containerPort: 80
