deployment/base/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxi-svc
spec:
  type: NodePort
  selector:
    app: taxi-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
