deployment/base/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /api/hc
    alb.ingress.kubernetes.io/target-type: 'instance'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:666583083672:certificate/2f5020e0-01dd-43dd-aa7e-0699015d6b89
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
  name: taxi-ingress
  namespace: taxi
  finalizers:
    - ingress.k8s.aws/resources
  labels:
    app: taxi-ingress
spec:
  ingressClassName: alb
  rules:
  - host: taxi-staging.sparcs.org
    http:
      paths:
      - path: /
        backend:
          service:
            name: taxi-svc
            port: 
              number: 80
        pathType: Prefix
  tls:
  - hosts:
    - taxi-staging.sparcs.org
